SERVER-25610 Signal last migration for a namespace after freeing the dist lock